--- a/7_graph_trends_lcchange.ipynb
+++ b/7_graph_trends_lcchange.ipynb
@@ -169,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_figure(label_set, df, tile, year1, year2):\n",
@@ -259,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "in_dir = r\"Z:\\eval_materials\\sites.prep\\h04v02_ref_data\\Trends\\Recode\\LCChange\"\n",
+    "in_dir = r\"Z:\\eval_materials\\sites.prep\\h27v08_v2017.08.18\\ref_data\\Trends\\nge\"\n",
     "tile = \"h04v02\""
    ]
   },
@@ -433,7 +435,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(classes, len(classes))\n",
